--- a/packages/export/examples/site/about.html
+++ b/packages/export/examples/site/about.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Some Page</title>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <h1>Just some page</h1>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
